// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Control {asFragment} should be fullwidth, loading and size = large 1`] = `
<DocumentFragment>
  <div
    class="control is-expanded is-loading is-large"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Control {asFragment} should concat classname in props with Bulma classname 1`] = `
<DocumentFragment>
  <div
    class="control other-class this-is-a-test"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Control {asFragment} should have control classname 1`] = `
<DocumentFragment>
  <div
    class="control"
  >
    <p
      class="bd-notification is-success"
    />
    <p>
      Default
    </p>
    <p>
      Container
    </p>
    <p />
  </div>
</DocumentFragment>
`;

exports[`Control {asFragment} should render as a html section element 1`] = `
<DocumentFragment>
  <section
    class="control"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Control {asFragment} should use inline styles 1`] = `
<DocumentFragment>
  <div
    class="control"
    style="height: 250px;"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;
